--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
-Hello, world!
-fdsfsdfsdfsd
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Studio</title>
+</head>
+<body>
+    <header>
+    <a href="">Web Studio</a>
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+    
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+
+    </footer>
+</body>
+</html>
