--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Studio</title>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-    <a href="">Web Studio</a>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    
-    </header>
-    <main>
-        <section></section>
-        <section></section>
-        <section></section>
-    </main>
-
-    </footer>
+<header>
+    <nav>
+        <a href="./index.html"></a>
+        <ul>
+            <li>
+                <a href>Studio</a>
+            </li>
+            <li>
+                <a href>Portfolio</a>
+            </li>
+            <li>
+                <a href>Contacts</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
