--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
     <nav>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li>
                 <a href>Studio</a>
@@ -27,7 +27,7 @@
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
@@ -65,22 +65,22 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="img/img(1).jpg" alt="">
+                <img src="./img(1).jpg" alt="photo" width="264"> 
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="img/img(2).jpg" alt="">
+                <img src="./img(2).jpg" alt="photo" width="264">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="img/img(3).jpg" alt="">
+                <img src="./img(3).jpg" alt="photo" width="264">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="img/img(4).jpg" alt="">
+                <img src="./img(4).jpg" alt="photo" width="264">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
