--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./img/img1.jpg" alt="photo" width="264"> 
+                <img src="./img/img1.jpg" alt="photo" width="264"/> 
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./img/img2.jpg" alt="photo" width="264">
+                <img src="./img/img2.jpg" alt="photo" width="264"/> 
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./img/img3.jpg" alt="photo" width="264">
+                <img src="./img/img3.jpg" alt="photo" width="264"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./img/img4.jpg" alt="photo" width="264">
+                <img src="./img/img4.jpg" alt="photo" width="264"/>
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
