--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./images/" alt="photo" width="264"> 
+                <img src="./images/img1.jpg" alt="photo" width="264"> 
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
