--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https: //fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -83,6 +87,42 @@
                 <img src="./images/img4.jpg" alt="photo" width="264"/>
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
+    <!-- Our Portfolio -->
+    <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+            <li>
+                <img src="./images/Portfolio1.jpg" alt="Portfolio" width="264"/>
+                <h3>Banking App</h3>
+                <p>App</p>
+            </li>
+            <li>
+                <img src="./images/Portfolio2.jpg" alt="Portfolio" width="264"/>
+                <h3>Cashless Payment</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/Portfolio3.jpg" alt="Portfolio" width="264"/>
+                <h3>Meditation App</h3>
+                <p>App</p>
+            </li>
+            <li>
+                <img src="./images/Portfolio4.jpg" alt="Portfolio" width="264"/>
+                <h3>Taxi Service</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/Portfolio5.jpg" alt="Portfolio" width="264"/>
+                <h3>Screen Illustrations</h3>
+                <p>Design</p>
+            </li>
+            <li>
+                <img src="./images/Portfolio6.jpg" alt="Portfolio" width="264"/>
+                <h3>Online Courses</h3>
+                <p>Marketing</p>
             </li>
         </ul>
     </section>
