--- a/index.html
+++ b/index.html
@@ -10,127 +10,127 @@
     <link href="https: //fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
-    <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li>
-                <a href>Studio</a>
+<header class="header">
+    <nav class="header-navigation">
+        <a class="header-logo" href="./index.html">Web<span class="heder-logo-cursive">Studio</span></a>
+        <ul class="header-menu-list">
+            <li class="header-menu-item">
+                <a class="header-menu-link" href>Studio</a>
             </li>
-            <li>
-                <a href>Portfolio</a>
+            <li class="header-menu-item">
+                <a class="header-menu-link" href>Portfolio</a>
             </li>
-            <li>
-                <a href>Contacts</a>
+            <li class="header-menu-item">
+                <a class="header-menu-link" href>Contacts</a>
             </li>
         </ul>
     </nav>
     <address>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="header-contact-list">
+            <li class="header-contact">
+                <a class="header-menu-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <li class="header-contact">
+                <a class="header-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
 </header>
 <main>
     <!-- Effective Solutions -->
-    <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+    <section class="Solutions">
+        <h1 class="Solutions-title">Effective Solutions for Your Business</h1>
+        <button class="Solutions-buy-btn" type="button">Order Service</button>
     </section>
     <!-- Features -->
-    <section>
-        <h2>Features</h2>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+    <section class="qualities">
+        <h2 class="qualities-title">Features</h2>
+        <ul class="list-qualities">
+            <li class="Strategy">
+                <h3 class="Strategy-title">Strategy</h3>
+                <p class="qualities-strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <li class="Punctuality">
+                <h3 class="Punctuality-title">Punctuality</h3>
+                <p class="qualities-punctuality">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <l class="Diligence">
+                <h3 class="Diligence-title">Diligence</h3>
+                <p class="qualities-diligence">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <li class="Technologies">
+                <h3 class="Technologies-title">Technologies</h3>
+                <p class="qualities-technologies">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
     </section>
     <!-- Our Team -->
-    <section>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
+    <section class="Team">
+        <h2 class="Team-title">Our Team</h2>
+        <ul class="Team-list">
+            <li class="Mark">
                 <img src="./images/img1.jpg" alt="photo" width="264"/> 
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="section-heading">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
             </li>
-            <li>
+            <li class="Tom">
                 <img src="./images/img2.jpg" alt="photo" width="264"/> 
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="section-heading">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="Camila">
                 <img src="./images/img3.jpg" alt="photo" width="264"/>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <h3 class="Casection-heading">Camila Garcia</h3>
+                <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="Daniel">
                 <img src="./images/img4.jpg" alt="photo" width="264"/>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="Dasection-heading">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
             </li>
         </ul>
     </section>
     <!-- Our Portfolio -->
     <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-            <li>
+        <h2 class="Portfolio-title">Our Portfolio</h2>
+        <ul class="Portfolio-list">
+            <li class="Banking-App">
                 <img src="./images/Portfolio1.jpg" alt="Portfolio" width="264"/>
-                <h3>Banking App</h3>
-                <p>App</p>
+                <h3 class="Banking-app-title">Banking App</h3>
+                <p class="Banking-App-text">App</p>
             </li>
-            <li>
+            <li class="Cashless-Payment">
                 <img src="./images/Portfolio2.jpg" alt="Portfolio" width="264"/>
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
+                <h3 class="Payment-title">Cashless Payment</h3>
+                <p class="Cashless-Payment-text">Marketing</p>
             </li>
-            <li>
+            <li class="Meditation-App">
                 <img src="./images/Portfolio3.jpg" alt="Portfolio" width="264"/>
-                <h3>Meditation App</h3>
-                <p>App</p>
+                <h3 class="Meditation-title">Meditation App</h3>
+                <p class="Meditation-App-text">App</p>
             </li>
-            <li>
+            <li class="Taxi-Service">
                 <img src="./images/Portfolio4.jpg" alt="Portfolio" width="264"/>
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
+                <h3 class="Taxi-Service-title">Taxi Service</h3>
+                <p class="Taxi-Service-text">Marketing</p>
             </li>
-            <li>
+            <li class="Screen-Illustrations">
                 <img src="./images/Portfolio5.jpg" alt="Portfolio" width="264"/>
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
+                <h3 class="Screen-Illustrations-title">Screen Illustrations</h3>
+                <p class="Screen-Illustrations-text">Design</p>
             </li>
-            <li>
+            <li class="Online-Courses">
                 <img src="./images/Portfolio6.jpg" alt="Portfolio" width="264"/>
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
+                <h3 class="Online-Courses-title">Online Courses</h3>
+                <p class="Online-Courses-text">Marketing</p>
             </li>
         </ul>
     </section>
 </main>
 <!-- Footer -->
-<footer>
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<footer class="footer">
+    <a class="footer-link" href="./index.html">WebStudio</a>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
 </html>
