--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <header class="header">
     <nav class="header-navigation">
-        <a class="header-logo" href="./index.html">Web<span class="heder-logo-cursive">Studio</span></a>
+        <a class="header-logo" href="./index.html">Web<span class="header-logo-cursive">Studio</span></a>
         <ul class="header-menu-list">
             <li class="header-menu-item">
                 <a class="header-menu-link" href>Studio</a>
