--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https: //fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap" rel="stylesheet"/>
 </head>
 <body>
 <header class="header">
@@ -58,7 +58,7 @@
                 <h3 class="Punctuality-title">Punctuality</h3>
                 <p class="qualities-punctuality">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <l class="Diligence">
+            <li class="Diligence">
                 <h3 class="Diligence-title">Diligence</h3>
                 <p class="qualities-diligence">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
