--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.com/libraries/modern-normalize"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
+    <link 
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap" rel="stylesheet"/>
+    <link 
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&display=swap" rel="stylesheet"
+        />
 </head>
 <body>
 <header class="header">
@@ -19,13 +23,13 @@
         <a class="header-logo" href="./index.html">Web<span class="header-logo-cursive">Studio</span></a>
         <ul class="header-menu-list">
             <li class="header-menu-item">
-                <a class="header-menu-link" href>Studio</a>
+                <a class="header-menu-link" href="/">Studio</a>
             </li>
             <li class="header-menu-item">
-                <a class="header-menu-link" href>Portfolio</a>
+                <a class="header-menu-link" href="/">Portfolio</a>
             </li>
             <li class="header-menu-item">
-                <a class="header-menu-link" href>Contacts</a>
+                <a class="header-menu-link" href="/">Contacts</a>
             </li>
         </ul>
     </nav>
