--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="header-logo" href="./index.html">Web<span class="header-logo-cursive">Studio</span></a>
         <ul class="header-menu-list">
             <li class="header-menu-item">
-                <a class="header-menu-link" href="/">Studio</a>
+                <a class="header-menu-link" href="./index.html">Studio</a>
             </li>
             <li class="header-menu-item">
                 <a class="header-menu-link" href="/">Portfolio</a>
