--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.com/libraries/modern-normalize"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
     <link 
@@ -33,7 +33,7 @@
             </li>
         </ul>
     </nav>
-    <address>
+    <address class="address-contact">
         <ul class="header-contact-list">
             <li class="header-contact">
                 <a class="header-menu-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
