--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </ul>
     </nav>
     <address class="address-contact">
-        <ul class="address-contact-list">
-            <li class="address-contact">
-                <a class="address-contact-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="header-contact-list">
+            <li class="header-contact">
+                <a class="header-contact-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="address-contact">
-                <a class="address-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <li class="header-contact">
+                <a class="header-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
