--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <address class="address-contact">
         <ul class="header-contact-list">
             <li class="header-contact">
-                <a class="header-contact-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="header-menu-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="header-contact">
                 <a class="header-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
