--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </ul>
     </address>
 </header>
-<main>
+<main class="Sulutions">
     <section class="Solutions">
         <h1 class="Solutions-title">Effective Solutions for Your Business</h1>
         <button class="Solutions-buy-btn" type="button">Order Service</button>
