--- a/index.html
+++ b/index.html
@@ -45,27 +45,27 @@
     </address>
 </header>
 <main>
-    <section class="Solutions">
-        <h1 class="Solutions-title">Effective Solutions for Your Business</h1>
-        <button class="Solutions-buy-btn" type="button">Order Service</button>
+    <section class="section-one">
+        <h1 class="solutions-title">Effective Solutions for Your Business</h1>
+        <button class="solutions-buy-btn" type="button">Order Service</button>
     </section>
     <section class="qualities">
         <h2 class="qualities-title">Features</h2>
         <ul class="list-qualities">
-            <li class="Strategy">
-                <h3 class="Strategy-title">Strategy</h3>
+            <li class="strategy">
+                <h3 class="strategy-title">Strategy</h3>
                 <p class="qualities-strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li class="Punctuality">
-                <h3 class="Punctuality-title">Punctuality</h3>
+            <li class="punctuality">
+                <h3 class="punctuality-title">Punctuality</h3>
                 <p class="qualities-punctuality">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li class="Diligence">
-                <h3 class="Diligence-title">Diligence</h3>
+            <li class="diligence">
+                <h3 class="diligence-title">Diligence</h3>
                 <p class="qualities-diligence">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li class="Technologies">
-                <h3 class="Technologies-title">Technologies</h3>
+            <li class="technologies">
+                <h3 class="technologies-title">Technologies</h3>
                 <p class="qualities-technologies">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
