--- a/index.html
+++ b/index.html
@@ -71,64 +71,64 @@
         </ul>
     </section>
     <!-- Our Team -->
-    <section class="Team">
-        <h2 class="Team-title">Our Team</h2>
-        <ul class="Team-list">
-            <li class="Mark">
+    <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+            <li class="mark">
                 <img src="./images/img1.jpg" alt="photo" width="264"/> 
                 <h3 class="section-heading">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
             </li>
-            <li class="Tom">
+            <li class="tom">
                 <img src="./images/img2.jpg" alt="photo" width="264"/> 
                 <h3 class="section-heading">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
             </li>
-            <li class="Camila">
+            <li class="camila">
                 <img src="./images/img3.jpg" alt="photo" width="264"/>
-                <h3 class="Casection-heading">Camila Garcia</h3>
+                <h3 class="dasection-heading">Camila Garcia</h3>
                 <p class="text">Marketing</p>
             </li>
-            <li class="Daniel">
+            <li class="daniel">
                 <img src="./images/img4.jpg" alt="photo" width="264"/>
-                <h3 class="Dasection-heading">Daniel Wilson</h3>
+                <h3 class="dasection-heading">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
             </li>
         </ul>
     </section>
     <!-- Our Portfolio -->
     <section>
-        <h2 class="Portfolio-title">Our Portfolio</h2>
-        <ul class="Portfolio-list">
-            <li class="Banking-App">
-                <img src="./images/Portfolio1.jpg" alt="Portfolio" width="264"/>
-                <h3 class="Banking-app-title">Banking App</h3>
-                <p class="Banking-App-text">App</p>
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+            <li class="banking-app">
+                <img src="./images/Portfolio1.jpg" alt="portfolio" width="264"/>
+                <h3 class="banking-app-title">Banking App</h3>
+                <p class="banking-app-text">App</p>
             </li>
-            <li class="Cashless-Payment">
-                <img src="./images/Portfolio2.jpg" alt="Portfolio" width="264"/>
-                <h3 class="Payment-title">Cashless Payment</h3>
-                <p class="Cashless-Payment-text">Marketing</p>
+            <li class="cashless-payment">
+                <img src="./images/Portfolio2.jpg" alt="portfolio" width="264"/>
+                <h3 class="payment-title">Cashless Payment</h3>
+                <p class="cashless-payment-text">Marketing</p>
             </li>
             <li class="Meditation-App">
-                <img src="./images/Portfolio3.jpg" alt="Portfolio" width="264"/>
-                <h3 class="Meditation-title">Meditation App</h3>
-                <p class="Meditation-App-text">App</p>
+                <img src="./images/Portfolio3.jpg" alt="portfolio" width="264"/>
+                <h3 class="meditation-title">Meditation App</h3>
+                <p class="meditation-app-text">App</p>
             </li>
-            <li class="Taxi-Service">
+            <li class="taxi-service">
                 <img src="./images/Portfolio4.jpg" alt="Portfolio" width="264"/>
-                <h3 class="Taxi-Service-title">Taxi Service</h3>
-                <p class="Taxi-Service-text">Marketing</p>
+                <h3 class="taxi-service-title">Taxi Service</h3>
+                <p class="taxi-service-text">Marketing</p>
             </li>
-            <li class="Screen-Illustrations">
+            <li class="screen-illustrations">
                 <img src="./images/Portfolio5.jpg" alt="Portfolio" width="264"/>
-                <h3 class="Screen-Illustrations-title">Screen Illustrations</h3>
-                <p class="Screen-Illustrations-text">Design</p>
+                <h3 class="screen-illustrations-title">Screen Illustrations</h3>
+                <p class="screen-illustrations-text">Design</p>
             </li>
-            <li class="Online-Courses">
+            <li class="online-courses">
                 <img src="./images/Portfolio6.jpg" alt="Portfolio" width="264"/>
-                <h3 class="Online-Courses-title">Online Courses</h3>
-                <p class="Online-Courses-text">Marketing</p>
+                <h3 class="online-courses-title">Online Courses</h3>
+                <p class="online-courses-text">Marketing</p>
             </li>
         </ul>
     </section>
