--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <main>
     <section class="section-one">
         <h1 class="solutions-title">Effective Solutions for Your Business</h1>
-        <button class="solutions-buy-btn" type="button">Order Service</button>
+        <button type="button" class="solutions-buy-btn">Order Service</button>
     </section>
     <section class="qualities">
         <h2 class="qualities-title">Features</h2>
