--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </li>
             <li class="camila">
                 <img src="./images/img3.jpg" alt="photo" width="264"/>
-                <h3 class="dasection-heading">Camila Garcia</h3>
+                <h3 class="section-heading">Camila Garcia</h3>
                 <p class="text">Marketing</p>
             </li>
             <li class="daniel">
