--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
     <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
-            <li class="mark">
+            <li class="gallery">
                 <img src="./images/img1.jpg" alt="photo" width="264"/> 
                 <h3 class="section-heading">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
             </li>
-            <li class="tom">
+            <li class="gallery">
                 <img src="./images/img2.jpg" alt="photo" width="264"/> 
                 <h3 class="section-heading">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
             </li>
-            <li class="camila">
+            <li class="gallery">
                 <img src="./images/img3.jpg" alt="photo" width="264"/>
                 <h3 class="section-heading">Camila Garcia</h3>
                 <p class="text">Marketing</p>
             </li>
-            <li class="daniel">
+            <li class="gallery">
                 <img src="./images/img4.jpg" alt="photo" width="264"/>
                 <h3 class="dasection-heading">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
