--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </li>
             <li class="gallery">
                 <img src="./images/img4.jpg" alt="photo" width="264"/>
-                <h3 class="dasection-heading">Daniel Wilson</h3>
+                <h3 class="section-heading">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
             </li>
         </ul>
