--- a/index.html
+++ b/index.html
@@ -102,33 +102,33 @@
         <ul class="portfolio-list">
             <li class="banking-app">
                 <img src="./images/Portfolio1.jpg" alt="portfolio" width="360"/>
-                <h3 class="banking-app-title">Banking App</h3>
-                <p class="banking-app-text">App</p>
+                <h3 class="app-title">Banking App</h3>
+                <p class="app-text">App</p>
             </li>
             <li class="cashless-payment">
                 <img src="./images/Portfolio2.jpg" alt="portfolio" width="360"/>
-                <h3 class="payment-title">Cashless Payment</h3>
-                <p class="cashless-payment-text">Marketing</p>
+                <h3 class="app-title">Cashless Payment</h3>
+                <p class="app-text">Marketing</p>
             </li>
             <li class="Meditation-App">
                 <img src="./images/Portfolio3.jpg" alt="portfolio" width="360"/>
-                <h3 class="meditation-title">Meditation App</h3>
-                <p class="meditation-app-text">App</p>
+                <h3 class="app-title">Meditation App</h3>
+                <p class="app-text">App</p>
             </li>
             <li class="taxi-service">
                 <img src="./images/Portfolio4.jpg" alt="Portfolio" width="360"/>
-                <h3 class="taxi-service-title">Taxi Service</h3>
-                <p class="taxi-service-text">Marketing</p>
+                <h3 class="app-title">Taxi Service</h3>
+                <p class="app-text">Marketing</p>
             </li>
             <li class="screen-illustrations">
                 <img src="./images/Portfolio5.jpg" alt="Portfolio" width="360"/>
-                <h3 class="screen-illustrations-title">Screen Illustrations</h3>
-                <p class="screen-illustrations-text">Design</p>
+                <h3 class="app-title">Screen Illustrations</h3>
+                <p class="app-text">Design</p>
             </li>
             <li class="online-courses">
                 <img src="./images/Portfolio6.jpg" alt="Portfolio" width="360"/>
-                <h3 class="online-courses-title">Online Courses</h3>
-                <p class="online-courses-text">Marketing</p>
+                <h3 class="app-title">Online Courses</h3>
+                <p class="app-text">Marketing</p>
             </li>
         </ul>
     </section>
