--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </main>
 <!-- Footer -->
 <footer class="footer">
-    <a class="footer-link" href="./index.html">WebStudio</a>
+    <a class="footer-logo" href="./index.html">Web<span class="footer-logo-cursive">Studio</span></a>
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
