--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
             <li class="gallery">
-                <img src="./images/img1.jpg" alt="photo" width="264"/> 
+                <img src="./images/img1.jpg" class="img" alt="photo" width="264"/> 
                 <h3 class="section-heading">Mark Guerrero</h3>
                 <p class="text">Product Designer</p>
             </li>
             <li class="gallery">
-                <img src="./images/img2.jpg" alt="photo" width="264"/> 
+                <img src="./images/img2.jpg" class="img" alt="photo" width="264"/> 
                 <h3 class="section-heading">Tom Ford</h3>
                 <p class="text">Frontend Developer</p>
             </li>
             <li class="gallery">
-                <img src="./images/img3.jpg" alt="photo" width="264"/>
+                <img src="./images/img3.jpg" class="img" alt="photo" width="264"/>
                 <h3 class="section-heading">Camila Garcia</h3>
                 <p class="text">Marketing</p>
             </li>
             <li class="gallery">
-                <img src="./images/img4.jpg" alt="photo" width="264"/>
+                <img src="./images/img4.jpg" class="img" alt="photo" width="264"/>
                 <h3 class="section-heading">Daniel Wilson</h3>
                 <p class="text">UI Designer</p>
             </li>
@@ -101,32 +101,32 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="banking-app">
-                <img src="./images/Portfolio1.jpg" alt="portfolio" width="360"/>
+                <img src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360"/>
                 <h3 class="app-title">Banking App</h3>
                 <p class="app-text">App</p>
             </li>
             <li class="cashless-payment">
-                <img src="./images/Portfolio2.jpg" alt="portfolio" width="360"/>
+                <img src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360"/>
                 <h3 class="app-title">Cashless Payment</h3>
                 <p class="app-text">Marketing</p>
             </li>
             <li class="Meditation-App">
-                <img src="./images/Portfolio3.jpg" alt="portfolio" width="360"/>
+                <img src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360"/>
                 <h3 class="app-title">Meditation App</h3>
                 <p class="app-text">App</p>
             </li>
             <li class="taxi-service">
-                <img src="./images/Portfolio4.jpg" alt="Portfolio" width="360"/>
+                <img src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360"/>
                 <h3 class="app-title">Taxi Service</h3>
                 <p class="app-text">Marketing</p>
             </li>
             <li class="screen-illustrations">
-                <img src="./images/Portfolio5.jpg" alt="Portfolio" width="360"/>
+                <img src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360"/>
                 <h3 class="app-title">Screen Illustrations</h3>
                 <p class="app-text">Design</p>
             </li>
             <li class="online-courses">
-                <img src="./images/Portfolio6.jpg" alt="Portfolio" width="360"/>
+                <img src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360"/>
                 <h3 class="app-title">Online Courses</h3>
                 <p class="app-text">Marketing</p>
             </li>
