--- a/index.html
+++ b/index.html
@@ -19,30 +19,32 @@
 </head>
 <body>
 <header class="header">
-    <nav class="header-navigation">
-        <a class="header-logo" href="./index.html">Web<span class="header-logo-cursive">Studio</span></a>
-        <ul class="header-menu-list">
-            <li class="header-menu-item">
-                <a class="header-menu-link" href="./index.html">Studio</a>
-            </li>
-            <li class="header-menu-item">
-                <a class="header-menu-link" href="">Portfolio</a>
-            </li>
-            <li class="header-menu-item">
-                <a class="header-menu-link" href="">Contacts</a>
-            </li>
-        </ul>
-    </nav>
-    <address class="address-contact">
-        <ul class="header-contact-list">
-            <li class="header-contact">
-                <a class="header-menu-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="header-contact">
-                <a class="header-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-        </ul>
-    </address>
+<div class="container">
+        <nav class="header-navigation">
+            <a class="header-logo" href="./index.html">Web<span class="header-logo-cursive">Studio</span></a>
+            <ul class="header-menu-list">
+                <li class="header-menu-item">
+                    <a class="header-menu-link" href="./index.html">Studio</a>
+                </li>
+                <li class="header-menu-item">
+                    <a class="header-menu-link" href="">Portfolio</a>
+                </li>
+                <li class="header-menu-item">
+                    <a class="header-menu-link" href="">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <address class="address-contact">
+            <ul class="header-contact-list">
+                <li class="header-contact">
+                    <a class="header-menu-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="header-contact">
+                    <a class="header-menu-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
+</div>
 </header>
 <main>
     <section class="section-one">
