--- a/index.html
+++ b/index.html
@@ -47,31 +47,33 @@
 </div>
 </header>
 <main>
-    <section class="section-one">
-        <h1 class="solutions-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="solutions-buy-btn">Order Service</button>
-    </section>
-    <section class="qualities">
-        <h2 class="qualities-title">Features</h2>
-        <ul class="list-qualities">
-            <li class="strategy">
-                <h3 class="strategy-title">Strategy</h3>
-                <p class="qualities-strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-            </li>
-            <li class="punctuality">
-                <h3 class="strategy-title">Punctuality</h3>
-                <p class="qualities-strategy">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </li>
-            <li class="diligence">
-                <h3 class="strategy-title">Diligence</h3>
-                <p class="qualities-strategy">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </li>
-            <li class="technologies">
-                <h3 class="strategy-title">Technologies</h3>
-                <p class="qualities-strategy">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </li>
-        </ul>
-    </section>
+    <div class="section-one-container">
+        <section class="section-one">
+            <h1 class="solutions-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="solutions-buy-btn">Order Service</button>
+        </section>
+        <section class="qualities">
+            <h2 class="qualities-title">Features</h2>
+            <ul class="list-qualities">
+                <li class="strategy">
+                    <h3 class="strategy-title">Strategy</h3>
+                    <p class="qualities-strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li class="punctuality">
+                    <h3 class="strategy-title">Punctuality</h3>
+                    <p class="qualities-strategy">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li class="diligence">
+                    <h3 class="strategy-title">Diligence</h3>
+                    <p class="qualities-strategy">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li class="technologies">
+                    <h3 class="strategy-title">Technologies</h3>
+                    <p class="qualities-strategy">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+    </div>
     <!-- Our Team -->
     <section class="team">
         <h2 class="team-title">Our Team</h2>
