--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 </header>
 <main>
-    <div class="section-one-container">
+    <div class="section">
         <section class="section-one">
             <h1 class="solutions-title">Effective Solutions for Your Business</h1>
             <button type="button" class="solutions-buy-btn">Order Service</button>
