--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 </header>
 <main>
         <section class="section-one">
-            <h1 class="solutions-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="solutions-buy-btn">Order Service</button>
+            <div class="container">
+                <h1 class="solutions-title">Effective Solutions for Your Business</h1>
+                <button type="button" class="solutions-buy-btn">Order Service</button>
+            </div>
         </section>
     <section class="qualities">
         <h2 class="qualities-title">Features</h2>
