--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
     <section class="qualities">
         <div class="container">
-            <h2 class="qualities-title">Features</h2>
+            <h2 class="visually-hidden">Features</h2>
             <ul class="list-qualities">
                 <li class="strategy">
                     <h3 class="strategy-title">Strategy</h3>
