--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <div class="container">
             <h2 class="visually-hidden">Features</h2>
             <ul class="list-qualities">
-                <li class="strategy">
+                <li class="qualities-items">
                     <h3 class="strategy-title">Strategy</h3>
                     <p class="qualities-strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li class="punctuality">
+                <li class="qualities-items">
                     <h3 class="strategy-title">Punctuality</h3>
                     <p class="qualities-strategy">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li class="diligence">
+                <li class="qualities-items">
                     <h3 class="strategy-title">Diligence</h3>
                     <p class="qualities-strategy">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li class="technologies">
+                <li class="qualities-items">
                     <h3 class="strategy-title">Technologies</h3>
                     <p class="qualities-strategy">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
