--- a/index.html
+++ b/index.html
@@ -77,29 +77,31 @@
         </div>
     </section>
     <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-            <li class="gallery">
-                <img src="./images/img1.jpg" class="img" alt="photo" width="264"/> 
-                <h3 class="section-heading">Mark Guerrero</h3>
-                <p class="text">Product Designer</p>
-            </li>
-            <li class="gallery">
-                <img src="./images/img2.jpg" class="img" alt="photo" width="264"/> 
-                <h3 class="section-heading">Tom Ford</h3>
-                <p class="text">Frontend Developer</p>
-            </li>
-            <li class="gallery">
-                <img src="./images/img3.jpg" class="img" alt="photo" width="264"/>
-                <h3 class="section-heading">Camila Garcia</h3>
-                <p class="text">Marketing</p>
-            </li>
-            <li class="gallery">
-                <img src="./images/img4.jpg" class="img" alt="photo" width="264"/>
-                <h3 class="section-heading">Daniel Wilson</h3>
-                <p class="text">UI Designer</p>
-            </li>
-        </ul>
+        <div class="container">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="gallery">
+                    <img src="./images/img1.jpg" class="img" alt="photo" width="264"/> 
+                    <h3 class="section-heading">Mark Guerrero</h3>
+                    <p class="text">Product Designer</p>
+                </li>
+                <li class="gallery">
+                    <img src="./images/img2.jpg" class="img" alt="photo" width="264"/> 
+                    <h3 class="section-heading">Tom Ford</h3>
+                    <p class="text">Frontend Developer</p>
+                </li>
+                <li class="gallery">
+                    <img src="./images/img3.jpg" class="img" alt="photo" width="264"/>
+                    <h3 class="section-heading">Camila Garcia</h3>
+                    <p class="text">Marketing</p>
+                </li>
+                <li class="gallery">
+                    <img src="./images/img4.jpg" class="img" alt="photo" width="264"/>
+                    <h3 class="section-heading">Daniel Wilson</h3>
+                    <p class="text">UI Designer</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section>
         <h2 class="portfolio-title">Our Portfolio</h2>
