--- a/index.html
+++ b/index.html
@@ -81,21 +81,23 @@
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
                 <li class="gallery">
-                    <img src="./images/img1.jpg" class="img" alt="photo" width="264"/> 
-                    <h3 class="section-heading">Mark Guerrero</h3>
-                    <p class="text">Product Designer</p>
+                    <div class="info-mark">
+                        <img src="./images/img1.jpg" class="img" alt="photo" width="264"/> 
+                        <h3 class="section-heading">Mark Guerrero</h3>
+                        <p class="text">Product Designer</p>
+                    </div>
                 </li>
-                <li class="gallery">
+                <li class="info-tom">
                     <img src="./images/img2.jpg" class="img" alt="photo" width="264"/> 
                     <h3 class="section-heading">Tom Ford</h3>
                     <p class="text">Frontend Developer</p>
                 </li>
-                <li class="gallery">
+                <li class="info-camilla">
                     <img src="./images/img3.jpg" class="img" alt="photo" width="264"/>
                     <h3 class="section-heading">Camila Garcia</h3>
                     <p class="text">Marketing</p>
                 </li>
-                <li class="gallery">
+                <li class="info-daniel">
                     <img src="./images/img4.jpg" class="img" alt="photo" width="264"/>
                     <h3 class="section-heading">Daniel Wilson</h3>
                     <p class="text">UI Designer</p>
