--- a/index.html
+++ b/index.html
@@ -87,20 +87,26 @@
                         <p class="text">Product Designer</p>
                     </div>
                 </li>
-                <li class="info-tom">
-                    <img src="./images/img2.jpg" class="img" alt="photo" width="264"/> 
-                    <h3 class="section-heading">Tom Ford</h3>
-                    <p class="text">Frontend Developer</p>
+                <li class="gallery">
+                    <div class="info-tom">
+                        <img src="./images/img2.jpg" class="img" alt="photo" width="264"/> 
+                        <h3 class="section-heading">Tom Ford</h3>
+                        <p class="text">Frontend Developer</p>
+                    </div>
                 </li>
-                <li class="info-camilla">
-                    <img src="./images/img3.jpg" class="img" alt="photo" width="264"/>
-                    <h3 class="section-heading">Camila Garcia</h3>
-                    <p class="text">Marketing</p>
+                <li class="gallery">
+                    <div class="info-camila">
+                        <img src="./images/img3.jpg" class="img" alt="photo" width="264"/>
+                        <h3 class="section-heading">Camila Garcia</h3>
+                        <p class="text">Marketing</p>
+                    </div>
                 </li>
-                <li class="info-daniel">
-                    <img src="./images/img4.jpg" class="img" alt="photo" width="264"/>
-                    <h3 class="section-heading">Daniel Wilson</h3>
-                    <p class="text">UI Designer</p>
+                <li class="gallery">
+                    <div class="info-daniel">
+                        <img src="./images/img4.jpg" class="img" alt="photo" width="264"/>
+                        <h3 class="section-heading">Daniel Wilson</h3>
+                        <p class="text">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div>
