--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
             <ul class="team-list">
                     <li class="gallery">
                             <img src="./images/img1.jpg" class="img" alt="photo" width="264"/> 
-                            <h3 class="section-heading">Mark Guerrero</h3>
-                            <p class="text">Product Designer</p>
+                            <div class="">
+                                <h3 class="section-heading">Mark Guerrero</h3>
+                                <p class="text">Product Designer</p>
+                            </div>
                     </li>
                 <li class="gallery">
                         <img src="./images/img2.jpg" class="img" alt="photo" width="264"/> 
