--- a/index.html
+++ b/index.html
@@ -82,25 +82,31 @@
             <ul class="team-list">
                     <li class="gallery">
                             <img src="./images/img1.jpg" class="img" alt="photo" width="264"/> 
-                            <div class="">
+                            <div class="portfolio-item">
                                 <h3 class="section-heading">Mark Guerrero</h3>
                                 <p class="text">Product Designer</p>
                             </div>
                     </li>
                 <li class="gallery">
                         <img src="./images/img2.jpg" class="img" alt="photo" width="264"/> 
-                        <h3 class="section-heading">Tom Ford</h3>
-                        <p class="text">Frontend Developer</p>
+                        <div class="portfolio-item">
+                            <h3 class="section-heading">Tom Ford</h3>
+                            <p class="text">Frontend Developer</p>
+                        </div>
                 </li>
                 <li class="gallery">
                         <img src="./images/img3.jpg" class="img" alt="photo" width="264"/>
-                        <h3 class="section-heading">Camila Garcia</h3>
-                        <p class="text">Marketing</p>
+                        <div class="portfolio-item">
+                            <h3 class="section-heading">Camila Garcia</h3>
+                            <p class="text">Marketing</p>
+                        </div>
                 </li>
                 <li class="gallery">
                         <img src="./images/img4.jpg" class="img" alt="photo" width="264"/>
-                        <h3 class="section-heading">Daniel Wilson</h3>
-                        <p class="text">UI Designer</p>
+                        <div class="portfolio-item">
+                            <h3 class="section-heading">Daniel Wilson</h3>
+                            <p class="text">UI Designer</p>
+                        </div>
                 </li>
             </ul>
         </div>
