--- a/index.html
+++ b/index.html
@@ -111,40 +111,42 @@
             </ul>
         </div>
     </section>
-    <section>
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-            <li class="banking-app">
-                <img src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360"/>
-                <h3 class="app-title">Banking App</h3>
-                <p class="app-text">App</p>
-            </li>
-            <li class="cashless-payment">
-                <img src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360"/>
-                <h3 class="app-title">Cashless Payment</h3>
-                <p class="app-text">Marketing</p>
-            </li>
-            <li class="Meditation-App">
-                <img src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360"/>
-                <h3 class="app-title">Meditation App</h3>
-                <p class="app-text">App</p>
-            </li>
-            <li class="taxi-service">
-                <img src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360"/>
-                <h3 class="app-title">Taxi Service</h3>
-                <p class="app-text">Marketing</p>
-            </li>
-            <li class="screen-illustrations">
-                <img src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360"/>
-                <h3 class="app-title">Screen Illustrations</h3>
-                <p class="app-text">Design</p>
-            </li>
-            <li class="online-courses">
-                <img src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360"/>
-                <h3 class="app-title">Online Courses</h3>
-                <p class="app-text">Marketing</p>
-            </li>
-        </ul>
+    <section class="our-portfolio">
+        <div class="container">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+                <li class="banking-app">
+                    <img src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360"/>
+                    <h3 class="app-title">Banking App</h3>
+                    <p class="app-text">App</p>
+                </li>
+                <li class="cashless-payment">
+                    <img src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360"/>
+                    <h3 class="app-title">Cashless Payment</h3>
+                    <p class="app-text">Marketing</p>
+                </li>
+                <li class="Meditation-App">
+                    <img src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360"/>
+                    <h3 class="app-title">Meditation App</h3>
+                    <p class="app-text">App</p>
+                </li>
+                <li class="taxi-service">
+                    <img src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360"/>
+                    <h3 class="app-title">Taxi Service</h3>
+                    <p class="app-text">Marketing</p>
+                </li>
+                <li class="screen-illustrations">
+                    <img src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360"/>
+                    <h3 class="app-title">Screen Illustrations</h3>
+                    <p class="app-text">Design</p>
+                </li>
+                <li class="online-courses">
+                    <img src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360"/>
+                    <h3 class="app-title">Online Courses</h3>
+                    <p class="app-text">Marketing</p>
+                </li>
+            </ul>
+        </div>
     </section>
 </main>
 <footer class="footer">
