--- a/index.html
+++ b/index.html
@@ -115,32 +115,32 @@
         <div class="container">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
-                <li class="banking-app">
+                <li class="app">
                     <img src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360"/>
                     <h3 class="app-title">Banking App</h3>
                     <p class="app-text">App</p>
                 </li>
-                <li class="cashless-payment">
+                <li class="app">
                     <img src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360"/>
                     <h3 class="app-title">Cashless Payment</h3>
                     <p class="app-text">Marketing</p>
                 </li>
-                <li class="Meditation-App">
+                <li class="app">
                     <img src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360"/>
                     <h3 class="app-title">Meditation App</h3>
                     <p class="app-text">App</p>
                 </li>
-                <li class="taxi-service">
+                <li class="app">
                     <img src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360"/>
                     <h3 class="app-title">Taxi Service</h3>
                     <p class="app-text">Marketing</p>
                 </li>
-                <li class="screen-illustrations">
+                <li class="app">
                     <img src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360"/>
                     <h3 class="app-title">Screen Illustrations</h3>
                     <p class="app-text">Design</p>
                 </li>
-                <li class="online-courses">
+                <li class="app">
                     <img src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360"/>
                     <h3 class="app-title">Online Courses</h3>
                     <p class="app-text">Marketing</p>
