--- a/index.html
+++ b/index.html
@@ -117,33 +117,45 @@
             <ul class="portfolio-list">
                 <li class="app">
                     <img src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360"/>
-                    <h3 class="app-title">Banking App</h3>
-                    <p class="app-text">App</p>
+                    <div class="app-item">
+                        <h3 class="app-title">Banking App</h3>
+                        <p class="app-text">App</p>
+                    </div>
                 </li>
                 <li class="app">
                     <img src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360"/>
-                    <h3 class="app-title">Cashless Payment</h3>
-                    <p class="app-text">Marketing</p>
+                    <div class="app-item">
+                        <h3 class="app-title">Cashless Payment</h3>
+                        <p class="app-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="app">
                     <img src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360"/>
-                    <h3 class="app-title">Meditation App</h3>
-                    <p class="app-text">App</p>
+                    <div class="app-item">
+                        <h3 class="app-title">Meditation App</h3>
+                        <p class="app-text">App</p>
+                    </div>
                 </li>
                 <li class="app">
                     <img src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360"/>
-                    <h3 class="app-title">Taxi Service</h3>
-                    <p class="app-text">Marketing</p>
+                    <div class="app-item">
+                        <h3 class="app-title">Taxi Service</h3>
+                        <p class="app-text">Marketing</p>
+                    </div>
                 </li>
                 <li class="app">
                     <img src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360"/>
-                    <h3 class="app-title">Screen Illustrations</h3>
-                    <p class="app-text">Design</p>
+                    <div class="app-item">
+                        <h3 class="app-title">Screen Illustrations</h3>
+                        <p class="app-text">Design</p>
+                    </div>
                 </li>
                 <li class="app">
                     <img src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360"/>
-                    <h3 class="app-title">Online Courses</h3>
-                    <p class="app-text">Marketing</p>
+                    <div class="app-item">
+                        <h3 class="app-title">Online Courses</h3>
+                        <p class="app-text">Marketing</p>
+                    </div>
                 </li>
             </ul>
         </div>
