--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             <h2 class="visually-hidden">Features</h2>
             <ul class="list-qualities">
                 <li class="qualities-items">
+                    <div class="icon-block">
+                        <svg class="icon-adv" width="64" height="64">
+                            <use href="./images/icons.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="strategy-title">Strategy</h3>
                     <p class="qualities-strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
