--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                     <p class="qualities-strategy">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="qualities-items">
+                    <div class="icon-block">
+                        <svg class="icon-adv" width="64" height="64">
+                            <use href="./images/icons.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="strategy-title">Punctuality</h3>
                     <p class="qualities-strategy">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
