--- a/index.html
+++ b/index.html
@@ -76,10 +76,20 @@
                     <p class="qualities-strategy">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="qualities-items">
+                    <div class="icon-block">
+                        <svg class="icon-adv" width="64" height="64">
+                            <use href="./images/icons.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
                     <h3 class="strategy-title">Diligence</h3>
                     <p class="qualities-strategy">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="qualities-items">
+                    <div class="icon-block">
+                        <svg class="icon-adv" width="64" height="64">
+                            <use href="./images/icons.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="strategy-title">Technologies</h3>
                     <p class="qualities-strategy">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
