--- a/index.html
+++ b/index.html
@@ -102,10 +102,9 @@
             <ul class="team-list">
                     <li class="gallery">
                             <img src="./images/img1.jpg" class="img" alt="photo" width="264"/> 
-                            <div class="portfolio-item">
+                            < class="portfolio-item">
                                 <h3 class="section-heading">Mark Guerrero</h3>
                                 <p class="text">Product Designer</p>
-                                <div class="our-team-network">
                                     <ul class="our-team-network-list">
                                         <li class="our-team-network-item">
                                             <a class="our-team-link" href="">
@@ -136,7 +135,6 @@
                                             </a>
                                         </li>
                                     </ul>
-                                </div>
                             </div>
                     </li>
                 <li class="gallery">
