--- a/index.html
+++ b/index.html
@@ -256,45 +256,74 @@
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="app">
-                    <img src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360"/>
-                    <div class="app-item">
-                        <h3 class="app-title">Banking App</h3>
-                        <p class="app-text">App</p>
+                    <div class="portfolio-div">
+                        <img src="./images/Portfolio1.jpg" class="img" alt="portfolio" width="360"/>
+                        <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                        <div class="app-item">
+                            <h3 class="app-title">Banking App</h3>
+                            <p class="app-text">App</p>
+                        </div>
                     </div>
                 </li>
                 <li class="app">
-                    <img src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360"/>
-                    <div class="app-item">
-                        <h3 class="app-title">Cashless Payment</h3>
-                        <p class="app-text">Marketing</p>
+                    <div class="portfolio-div">
+                        <img src="./images/Portfolio2.jpg" class="img" alt="portfolio" width="360"/>
+                        <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                            Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                        <div class="app-item">
+                            <h3 class="app-title">Cashless Payment</h3>
+                            <p class="app-text">Marketing</p>
+                        </div>
                     </div>
                 </li>
                 <li class="app">
-                    <img src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360"/>
-                    <div class="app-item">
-                        <h3 class="app-title">Meditation App</h3>
-                        <p class="app-text">App</p>
+                    <div class="portfolio-div">
+                        <img src="./images/Portfolio3.jpg" class="img" alt="portfolio" width="360"/>
+                        <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                            Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                        <div class="app-item">
+                            <h3 class="app-title">Meditation App</h3>
+                            <p class="app-text">App</p>
+                        </div>
                     </div>
                 </li>
                 <li class="app">
-                    <img src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360"/>
-                    <div class="app-item">
-                        <h3 class="app-title">Taxi Service</h3>
-                        <p class="app-text">Marketing</p>
+                    <div class="portfolio-div">
+                        <img src="./images/Portfolio4.jpg" class="img" alt="Portfolio" width="360"/>
+                        <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                            Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                        <div class="app-item">
+                            <h3 class="app-title">Taxi Service</h3>
+                            <p class="app-text">Marketing</p>
+                        </div>
                     </div>
                 </li>
                 <li class="app">
-                    <img src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360"/>
-                    <div class="app-item">
-                        <h3 class="app-title">Screen Illustrations</h3>
-                        <p class="app-text">Design</p>
+                    <div class="portfolio-div">
+                        <img src="./images/Portfolio5.jpg" class="img" alt="Portfolio" width="360"/>
+                        <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                            Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                        <div class="app-item">
+                            <h3 class="app-title">Screen Illustrations</h3>
+                            <p class="app-text">Design</p>
+                        </div>
                     </div>
                 </li>
                 <li class="app">
-                    <img src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360"/>
-                    <div class="app-item">
-                        <h3 class="app-title">Online Courses</h3>
-                        <p class="app-text">Marketing</p>
+                    <div class="portfolio-div">
+                        <img src="./images/Portfolio6.jpg" class="img" alt="Portfolio" width="360"/>
+                        <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
+                            Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                        <div class="app-item">
+                            <h3 class="app-title">Online Courses</h3>
+                            <p class="app-text">Marketing</p>
+                        </div>
                     </div>
                 </li>
             </ul>
