--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     </section>
 </main>
 <footer class="footer">
-    <div class="container box">
+    <div class="container footer-div">
         <div class="footer-box">
             <a class="footer-logo" href="./index.html">Web<span class="footer-logo-cursive">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
