--- a/index.html
+++ b/index.html
@@ -373,8 +373,11 @@
 </footer>
 <div class="backdrop is-open">
     <div class="modal">
-        <button type="modal-btn" class="modal-close"></button>
-        <svg class="icon icon-close"><use xlink:href="#icon-close"></use></svg>
+        <button type="modal-btn" class="modal-close">
+        <svg class="modal-svg" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+        </button>
         <p class="modal-title title"></p>
         <form class="footer-form">
             <label for="footer-name" aria-label="name"></label>
