--- a/index.html
+++ b/index.html
@@ -371,9 +371,9 @@
         </div>
     </div>
 </footer>
-<div class="backdrop is-open">
+<div class="modal-overlay">
     <div class="modal">
-        <button type="modal-btn" class="modal-close">
+        <button type="button" class="modal-close">
         <svg class="modal-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
         </svg>
