--- a/index.html
+++ b/index.html
@@ -370,7 +370,8 @@
         </div>
     </div>
 </footer>
-<div class="modal-overlay"></div>
+<div class="modal-overlay">
 </form>
+</div>
 </body>
 </html>
