--- a/index.html
+++ b/index.html
@@ -405,7 +405,8 @@
             </div>
             </div>
             <div class="modal-comment">
-                <label for="user-comment" class="modal-input-label">Comment<textarea class="modal-form-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
+                <label for="user-comment" class="modal-input-label">Comment
+                    <textarea class="modal-form-comment" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
                 </label>
             </div>
             <div class="modal-checkbox">
